[project]
name = "which-bird-are-you"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
